--- a/chapter1.tex
+++ b/chapter1.tex
@@ -82,7 +82,7 @@ another evacuation mechanism must occur: it would be the role of massive black h
 
 For instance, this paper \cite{fm1} is awesome.
 
-See Figure \ref{fig:figure_label} as an example on how to add figures to your thesis.
+See Figure \ref{fig:figure_label} as an example on how to add figures to your publication.
 It is recommended that all figures to be kept in a separate directory.
 Note the `./figures/figure' in the example below.
 
@@ -119,7 +119,9 @@ trivial false problem. As recalled above, Relativity is a local theory that does
 Cosmology: galaxies actually reach speed c, and crossing the horizon, reach a Grandcosmos of
 radius $R_{GC}$ , given, as a first approximation, by the symmetrical holographic relation, this time
 monochrome instead of the monoradial relation above:
-$S_{BH} = \pi(R/l_P )^{2} = 2\pi R_{(0)} GC /l_{P}$
+\begin{equation}
+S_{BH}\, = \pi(R/l_P )^{2} = 2\pi R_{(0)} GC /l_{P}
+\end{equation}
 with $R_{(0)} GC /R = l_{P} /\lambdabar_{M} \sim 10^{61}$ . The conservation of the time constant $t = R/c, = R_{(0)} GC /C$ introduces a canonical velocity $C \sim 10^{61} c$, making appear an energy larger than that of the visible Universe by a
 factor $10^{122}$ , which can be identified with the $l_{P}$ -normalised quantum energy of vacuum, checked by
 the Casimir effect [7]. The central problem of quanto-cosmic physics is thus solved. Moreover, the
@@ -129,12 +131,16 @@ In a better approximation, justified below, R is replaced in the above relation 
 physics. Indeed, the half radius $R\prime/2$ has a simpler definition than $R/2$: it corresponds to the
 elimination of c between the classical electron radius and the Planck length. In this way, the sphere
 of radius $R\prime$ appears as the spherical hologram representation of the outer Grandcosmos:
-$$S\prime_{BH} = \pi(R\prime/l_{P})^{2} = 2\pi R_{GC} /l_{P}$$
+\begin{equation}
+S\prime_{BH}\, = \pi(R\prime/l_{P})^{2} = 2\pi R_{GC} /l_{P}
+\end{equation}
 This value will be dramaticaly confirmed in the section I.IV.
 Assuming the Toponic Quantification Hypothesis, the mass of a particle is an exact sub-multiple
 of the mass-equivalent M of the visible Universe: $m = M/N_{m}$ , and its canonical wavelength is $N m \lambdabar_{M}$ ,
 allowing the following holographic extension of the above mono-radial holographic conservation:
-$$S_{BH} = \pi(R/l_{P})^{2} = \frac{2\pi \cdot R}{\lambdabar_{M}} = \frac{2\pi \cdot N_{m}\ cdot R}{\lambdabar_{m}}$$
+\begin{equation}
+S_{BH}\, = \pi(R/l_{P})^{2} = \frac{2\pi \cdot R}{\lambdabar_{M}} = \frac{2\pi \cdot N_{m}\ cdot R}{\lambdabar_{m}}
+\end{equation}
 This series of large circles generates, by scanning, the approximation of a sphere: one thus passes
 from the Disk to the Sphere. Note that this justifies the factor $\frac{1}{4}$ in above BH entropy. But, for
 the approximation to be sufficient, the numbers $N_{m}$ must be very large. In this way, the Cosmos-
@@ -158,7 +164,9 @@ the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$ ,
 that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
 the Combinatorial Hierarchy of Special Numbers of Mersenne 3, 7, 127, the sum of which is 137.
 The critical mass is related to the elementary masses by:
-$$m_{P}^{4} = M m_{e} m_{p} m_{H}$$
+\begin{equation}
+m_{P}^{4}\, = M m_{e} m_{p} m_{H}
+\end{equation}
 this directly involves the mass of Planck $m_{P}$ , which at this day, has no known application, except
 that it is close to the mass of the human ovocyte. In this way, the local inertia is related to the distant
 masses, in accordance with the Mach principle, which the Relativity Theory does not explain.
@@ -196,7 +204,10 @@ deduced from $t_{K} /t_{e} = \sqrt{(a_{G} a_{w})}$, see below, using values of $
 range, with $\Gamma$, the Atiyah Constant (section 3.5).
 From the Holographic two-step interaction [3], it was deduced that the Kotov period is
 associated with the photon mass. With the above value, it is $$m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55} kg$$, the
-graviton mass being $$m_{gr} = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} kg$$. The corresponding ratios with electron mass(Fig.1) corresponds respectively to n = 24 and $n = \Gamma$ , the Atiyah constant, see Section 3.8.
+graviton mass being 
+\begin{equation}
+m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} kg
+\begin{equation}. The corresponding ratios with electron mass(Fig.1) corresponds respectively to n = 24 and $n = \Gamma$ , the Atiyah constant, see Section 3.8.
 
 \section{The Kotov Cosmic Coherent Oscillation Period}
 
@@ -210,15 +221,19 @@ The weak coupling constant [1] $a_{w} = (E_{F} /m_{e} c^{2} )^{2}$ is defined fr
 292.806161(6) GeV \approx 573007.33(25) m_{e} c^{2}$ , itself tied to the weak force constant $$G_{F} \equiv (\hbar c)^{3} /E_{F}^{2} \approx
 1.4358509(7) \times 10^{-62} Joule \cdot m^3 $$\cite{Pdc}. This introduces the product of two area speeds, confirming the
 flickering hypothesis:
-$$(\lambdabar_{e} 2/t_{K} )(hbar/\sqrt{(m_{p} m_{H})}) = \sqrt{(GG_{F})}$$
+\begin{equation}
+(\lambdabar_{e} 2/t_{K} )(hbar/\sqrt{(m_{p} m_{H})})\, = \sqrt{(GG_{F})}
+\end{equation}
 so the best measured cosmic quantity, the Kotov period, implies a symmetrization between
 gravitation and weak nuclear force. This specifies the G value to $10^-{6}$ precision (ppm). It is
 compatible with the well-elaborate $10^{-5}$ BIPM measurement \cite{Quinn}, at several sigmas from the Codata
 value [10], but the later is the mean between discordant measurements.
 Computer analysis shows that this value of G is compatible with the well-defined following
 value, with $m_{P} \equiv (\hbar c/G)^{1/2}$ and $d_{e} \approx 1.001159652$ the relative electron magnetic moment :
-$$(2^{127} /a_{G} )^{1/2} \approx d_{e} (H/p)^{3}
-\Leftrightarrow G \approx 6.6754552 \times 10^{-11} kg^{-1} \cdot m^{3} \cdot s^{-2}$$
+\begin{equation}
+(2^{127} /a_{G} )^{1/2} \approx d_{e} (H/p)^{3}
+\Leftrightarrow G \approx 6.6754552 \times 10^{-11} kg^{-1} \cdot m^{3} \cdot s^{-2}
+\end{equation}
 This value will be confirmed, in the ppb range, in Section III.
 
 \section{The omnipresence of the Kotov cycle in astrophysics}
@@ -285,7 +300,7 @@ timescales would coincide by chance is near $3 \cdot 10^{-4}$).
 
 \begin{figure}
 \centering
-\includegraphics[width=0.5\textwidth]{./figures/figure}
+\includegraphics[width=0.5\textwidth]{./figures/figure2}
 \caption{Resonance-spectrum F(ν) computed for 15 motions of the largest, fast-spinning bodies of
 the solar system. On horizontal axis is logarithm of frequency $\nu$ in $\mu$Hz, the dashed horizontal line
 shows a $ 3 \theta $ C.L., and the primary peak yields to the best - commensurable period 9594(65) s.}
@@ -294,7 +309,7 @@ shows a $ 3 \theta $ C.L., and the primary peak yields to the best - commensurab
 
 \begin{figure}
 \centering
-\includegraphics[width=0.5\textwidth]{./figures/figure}
+\includegraphics[width=0.5\textwidth]{./figures/figure3}
 \caption{Same as Fig. 2, for N = 11 sizes «diameters» of the solar system (with c = 1 and the $\pi$
 factor for inner orbits). The highest peak corresponds to the spatial scale 9600(120) light sec.}
 \label{fig:figure_label}
@@ -302,7 +317,7 @@ factor for inner orbits). The highest peak corresponds to the spatial scale 9600
 
 \begin{figure}
 \centering
-\includegraphics[width=0.5\textwidth]{./figures/figure}
+\includegraphics[width=0.5\textwidth]{./figures/figure4}
 \caption{Resonance-spectrum $F_{1} ( \nu)$, computed for N = 5746 binaries with periods < 5 days.
 Horizontal axis gives logarithm of the trial frequency ν (in μHz), the dashed line indicates a $3 \theta$
 C.L., and the major peak corresponds to a timescale of 9590(70) s.}
@@ -311,7 +326,7 @@ C.L., and the major peak corresponds to a timescale of 9590(70) s.}
 
 \begin{figure}
 \centering
-\includegraphics[width=0.5\textwidth]{./figures/figure}
+\includegraphics[width=0.5\textwidth]{./figures/figure5}
 \caption{Same as Fig. 4, for the $F_{2} ( \nu )$ spectrum, computed for N = 145 exoplanets with P < 1.5
 days. The strongest peak of the composite commensurability corresponds to a period of 9640(115) s
 at nearly $3.9\theta$ significance (after Kotov, 2018).}
@@ -368,7 +383,9 @@ but it took 9 years to get the current article published [12], and it appeared l
 links the time $t = \frac{R}{c}$ and the mean mass density by the c-free formula $$\rho_{c} = 3/8\pi Gt^{2} \approx 9.41198 \times
 10^{-27} kg \cdot m^{-3}$$ , So the mainstream idea of a temporal variability of the mean density $\rho_{c}$ cannot be to
 sustain, meaning that $\rho_{c}$ must be considered as a fundamental constant. One writes:
-$$t{\hbar,\rho_{c} ,G} = 1/\rho_{c}^{1/2} G^{1/2} = (R/c) (8\pi/3)^{1/2}$$
+\begin{equation}
+t{\hbar,\rho_{c} ,G}\, = 1/\rho_{c}^{1/2} G^{1/2} = (R/c) (8\pi/3)^{1/2}
+\end{equation}
 This idea of $\rho_{c}$ being a fundamental constant permits to define R without any ambiguity: the
 radius containing a critical mass. This means each point is the center of an equivalent black hole,
 justifying the above application of the Bekenstein-Hawking entropy. Opponents would say that the
@@ -381,7 +398,9 @@ Grandcosmos frame, as seen above.
 Introducing the Fermi constant $G_{F}$ , the associated c-free length is very particular, to $1.7\%$:
 $$l{\hbar,\rho_{c},G_{F}} = \hbar/\rho_{c}^{1/2} G_{F}^{1/2} \approx 9.07154 10^{9} m \approx \lambdabar_{e}^{2}/l_{P}$$
 Now, the following mandatory c-free times are close each over to $0.7\%$:
-$$T{\hbar,\rho_{c} ,G_{F} } = \hbar^{4} /\rho_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s$$
+\begin{equation}
+T{\hbar,\rho_{c} ,G_{F} }\, = \hbar^{4} /\rho_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s
+\end{equation}
 $$T\prime{\hbar,G,m} = \hbar^{3} /G^{2} m^{5} \approx 5.5224 \times 10^{57} s$$
 This would be the periodic time of a Large Cosmologic cycle, which matches with Topological Axis at n = 30;
 the holic dimension (see below), to 4\%. Comparing T with the Kotov Non-Doppler Cosmic
@@ -394,5 +413,8 @@ cosmic period of all events, in a perfectly deterministic and periodic Cosmos.
 Now, introducing the above Pioneer abnormal deceleration $g_{PN}$ , one gets the time: $$t{G, m_{e} , g_{PN} }
 = (Gm_{e} /g_{PN}^{3} )^{1/4} = (t_{PN}^{3} t\prime_{e} )^{1/4}$$ , where $t_{PN} = c/g_{PN}$ and $t\prime_{e} = Gm_{e} /c^{3}$ . This time is compatible with:
 $$t{G, m_{e} , g_{PN} } = t_{K} /(F/a)^{2}$$
-where the above Tifft factor F/a appears. The implication of the time $t\prime_{e} = Gm_{e} /c^{3} = 2.2568 \times 10^{-66} s$
+where the above Tifft factor F/a appears. The implication of the time 
+\begin{equation}
+t\prime_{e}\, = Gm_{e} /c^{3} = 2.2568 \times 10^{-66} s
+\end{equation}
 confirms the above Planck wall breakdown.
